# flappy-bird

./: .gitignore  CMakeLists.txt  README.md
assets/images/: tube-end.png~  tube.png~
src/: bird.cpp  bird.hpp  main.cpp  obstacle.cpp  obstacle.hpp
